Android/IFCViewerAndroid/distribution/ifcengine/include/engine.h

//
//		GetRevision
//				char				** timeStamp				IN/OUT
//
//				int64_t				returns						OUT
//
//		Returns the revision number.
//		The timeStamp is generated by the SVN system used during development.
//
int64_t		DECL STDC	GetRevision(
									char			** timeStamp
								);
//
//		GetRevision
//				char				** environmentVariables		IN/OUT
//				char				** developmentVariables		IN/OUT
//
//				int64_t				returns						OUT
//
//		Returns the revision number similar to the call GetRevision.
//		The environment variables will show known environment variables
//		and if they are set, for example environment variables ABC known
//		and unset and DEF as well as GHI known and set:
//			environmentVariables = "ABC:F;DEF:T;GHI:T"
//		Development variables are depending on the build environment
//		As an example in windows systems where Visual Studio is used:
//			developmentVariables = "...."
//
int64_t		DECL STDC	GetEnvironment(
									char			** environmentVariables,
									char			** developmentVariables
								);
//
//		AbortModel
//				int64_t				model						IN
//
//		This function abort running processes for a model.
//
int64_t		DECL STDC	AbortModel(
									int64_t			model,
									int64_t			setting
								);
//
//		SetAssertionFile
//				char				* fileName					IN
//
//		This function sets the file location where internal assertions should be written to.
//		If the filename is not set (default) many internal control procedures are not executed
//		and the code will be faster.
//
void		DECL STDC	SetAssertionFile(
									const char		* fileName
								);
void		DECL STDC	GetAssertionFile(
									char			** fileName
								);
//
//		GetSessionMetaInfo
//				int64_t				allocatedBlocks				IN/OUT
//				int64_t				allocatedBytes				IN/OUT
//				int64_t				nonUsedBlocks				IN/OUT
//				int64_t				nonUsedBytes				IN/OUT
//
void		DECL STDC	GetSessionMetaInfo(
									int64_t			* allocatedBlocks,
									int64_t			* allocatedBytes,
									int64_t			* nonUsedBlocks,
									int64_t			* nonUsedBytes
								);
//
//		GetModelMetaInfo
//				int64_t				model						IN
//				int64_t				allocatedInstances			IN/OUT
//				int64_t				allocatedUniqueInstances	IN/OUT
//				int64_t				activeInstances				IN/OUT
//				int64_t				activeUniqueInstances		IN/OUT
//				int64_t				removedInstances			IN/OUT
//				int64_t				removedUniqueInstances		IN/OUT
//				int64_t				inactiveUniqueInstances		IN/OUT
//				int64_t				allocatedBlocks				IN/OUT
//				int64_t				allocatedBytes				IN/OUT
//
void		DECL STDC	GetModelMetaInfo(
									int64_t			model,
									int64_t			* allocatedInstances,
									int64_t			* allocatedUniqueInstances,
									int64_t			* activeInstances,
									int64_t			* activeUniqueInstances,
									int64_t			* removedInstances,
									int64_t			* removedUniqueInstances,
									int64_t			* inactiveUniqueInstances,
									int64_t			* allocatedBlocks,
									int64_t			* allocatedBytes
								);
//
//		GetInstanceMetaInfo
//				int64_t				owlInstance					IN
//				int64_t				allocatedBlocks				IN/OUT
//				int64_t				allocatedBytes				IN/OUT
//
void		DECL STDC	GetInstanceMetaInfo(
									int64_t			owlInstance,
									int64_t			* allocatedBlocks,
									int64_t			* allocatedBytes
								);